:hammer: fixed codacy issues